@@ -1,174 +1,168 @@
-<ui version="4.0" >
- <author></author>
- <comment></comment>
- <exportmacro></exportmacro>
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>BreakpointDialog</class>
- <widget class="QDialog" name="BreakpointDialog" >
-  <property name="geometry" >
+ <widget class="QDialog" name="BreakpointDialog">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>304</width>
-    <height>201</height>
+    <height>216</height>
    </rect>
   </property>
-  <property name="sizePolicy" >
-   <sizepolicy>
-    <hsizetype>5</hsizetype>
-    <vsizetype>0</vsizetype>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
-  <property name="windowTitle" >
-   <string>Dialog</string>
+  <property name="windowTitle">
+   <string>Add breakpoint</string>
   </property>
-  <layout class="QVBoxLayout" >
-   <property name="margin" >
-    <number>9</number>
-   </property>
-   <property name="spacing" >
+  <layout class="QVBoxLayout">
+   <property name="spacing">
     <number>6</number>
    </property>
+   <property name="margin">
+    <number>9</number>
+   </property>
    <item>
-    <layout class="QVBoxLayout" >
-     <property name="margin" >
-      <number>0</number>
-     </property>
-     <property name="spacing" >
+    <layout class="QVBoxLayout">
+     <property name="spacing">
       <number>6</number>
      </property>
+     <property name="margin">
+      <number>0</number>
+     </property>
      <item>
-      <widget class="QLabel" name="label" >
-       <property name="sizePolicy" >
-        <sizepolicy>
-         <hsizetype>5</hsizetype>
-         <vsizetype>0</vsizetype>
+      <widget class="QLabel" name="label">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <property name="text" >
+       <property name="text">
         <string>Add breakpoint at address:</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="edtAddress" />
+      <widget class="QLineEdit" name="edtAddress"/>
      </item>
     </layout>
    </item>
    <item>
-    <layout class="QGridLayout" >
-     <property name="margin" >
+    <layout class="QGridLayout">
+     <property name="margin">
       <number>0</number>
      </property>
-     <property name="spacing" >
+     <property name="spacing">
       <number>6</number>
      </property>
-     <item row="2" column="1" >
-      <widget class="QComboBox" name="cmbxSegment" >
+     <item row="2" column="1">
+      <widget class="QComboBox" name="cmbxSegment">
        <item>
-        <property name="text" >
+        <property name="text">
          <string>any</string>
         </property>
        </item>
       </widget>
      </item>
-     <item row="1" column="0" >
-      <widget class="QLabel" name="label_3" >
-       <property name="text" >
+     <item row="1" column="0">
+      <widget class="QLabel" name="label_3">
+       <property name="text">
         <string>Subslot:</string>
        </property>
-       <property name="buddy" >
+       <property name="buddy">
         <cstring>cmbxSubslot</cstring>
        </property>
       </widget>
      </item>
-     <item row="2" column="0" >
-      <widget class="QLabel" name="label_4" >
-       <property name="text" >
+     <item row="2" column="0">
+      <widget class="QLabel" name="label_4">
+       <property name="text">
         <string>Segment:</string>
        </property>
-       <property name="buddy" >
+       <property name="buddy">
         <cstring>cmbxSegment</cstring>
        </property>
       </widget>
      </item>
-     <item row="1" column="1" >
-      <widget class="QComboBox" name="cmbxSubslot" >
+     <item row="1" column="1">
+      <widget class="QComboBox" name="cmbxSubslot">
        <item>
-        <property name="text" >
+        <property name="text">
          <string>any</string>
         </property>
        </item>
        <item>
-        <property name="text" >
+        <property name="text">
          <string>0</string>
         </property>
        </item>
        <item>
-        <property name="text" >
+        <property name="text">
          <string>1</string>
         </property>
        </item>
        <item>
-        <property name="text" >
+        <property name="text">
          <string>2</string>
         </property>
        </item>
        <item>
-        <property name="text" >
+        <property name="text">
          <string>3</string>
         </property>
        </item>
       </widget>
      </item>
-     <item row="0" column="0" >
-      <widget class="QLabel" name="label_2" >
-       <property name="text" >
+     <item row="0" column="0">
+      <widget class="QLabel" name="label_2">
+       <property name="text">
         <string>Slot:</string>
        </property>
-       <property name="buddy" >
+       <property name="buddy">
         <cstring>cmbxSlot</cstring>
        </property>
       </widget>
      </item>
-     <item row="0" column="1" >
-      <widget class="QComboBox" name="cmbxSlot" >
+     <item row="0" column="1">
+      <widget class="QComboBox" name="cmbxSlot">
        <item>
-        <property name="text" >
+        <property name="text">
          <string>any</string>
         </property>
        </item>
        <item>
-        <property name="text" >
+        <property name="text">
          <string>0</string>
         </property>
        </item>
        <item>
-        <property name="text" >
+        <property name="text">
          <string>1</string>
         </property>
        </item>
        <item>
-        <property name="text" >
+        <property name="text">
          <string>2</string>
         </property>
        </item>
        <item>
-        <property name="text" >
+        <property name="text">
          <string>3</string>
         </property>
        </item>
       </widget>
      </item>
-     <item row="1" column="2" >
+     <item row="1" column="2">
       <spacer>
-       <property name="orientation" >
+       <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>40</width>
          <height>20</height>
@@ -180,10 +174,10 @@
    </item>
    <item>
     <spacer>
-     <property name="orientation" >
+     <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
-     <property name="sizeHint" >
+     <property name="sizeHint" stdset="0">
       <size>
        <width>20</width>
        <height>5</height>
@@ -192,19 +186,19 @@
     </spacer>
    </item>
    <item>
-    <layout class="QHBoxLayout" >
-     <property name="margin" >
-      <number>0</number>
-     </property>
-     <property name="spacing" >
+    <layout class="QHBoxLayout">
+     <property name="spacing">
       <number>6</number>
+     </property>
+     <property name="margin">
+      <number>0</number>
      </property>
      <item>
       <spacer>
-       <property name="orientation" >
+       <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0">
         <size>
          <width>131</width>
          <height>31</height>
@@ -213,15 +207,15 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="okButton" >
-       <property name="text" >
+      <widget class="QPushButton" name="okButton">
+       <property name="text">
         <string>OK</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="cancelButton" >
-       <property name="text" >
+      <widget class="QPushButton" name="cancelButton">
+       <property name="text">
         <string>Cancel</string>
        </property>
       </widget>
@@ -230,7 +224,6 @@
    </item>
   </layout>
  </widget>
- <pixmapfunction></pixmapfunction>
  <resources/>
  <connections>
   <connection>
@@ -239,11 +232,11 @@
    <receiver>BreakpointDialog</receiver>
    <slot>accept()</slot>
    <hints>
-    <hint type="sourcelabel" >
+    <hint type="sourcelabel">
      <x>278</x>
      <y>253</y>
     </hint>
-    <hint type="destinationlabel" >
+    <hint type="destinationlabel">
      <x>96</x>
      <y>254</y>
     </hint>
@@ -255,11 +248,11 @@
    <receiver>BreakpointDialog</receiver>
    <slot>reject()</slot>
    <hints>
-    <hint type="sourcelabel" >
+    <hint type="sourcelabel">
      <x>369</x>
      <y>253</y>
     </hint>
-    <hint type="destinationlabel" >
+    <hint type="destinationlabel">
      <x>179</x>
      <y>282</y>
     </hint>
